Bug 104746 - [swrast] piglit attribs regression
Summary: [swrast] piglit attribs regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks: mesa-18.0
  Show dependency treegraph
 
Reported: 2018-01-23 01:25 UTC by Vinson Lee
Modified: 2018-01-24 17:20 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2018-01-23 01:25:30 UTC
$ ./bin/attribs -auto
Testing GL2

Testing glColor3b(), vertex arrays
Testing glColor3d(), vertex arrays
Testing glColor3f(), vertex arrays
Testing glColor3i(), vertex arrays
Testing glColor3s(), vertex arrays
Testing glColor3ub(), vertex arrays
Testing glColor3ui(), vertex arrays
Testing glColor3ui(), vertex arrays
Testing glColor3us(), vertex arrays
Testing glColor4b(), vertex arrays
Testing glColor4d(), vertex arrays
Testing glColor4f(), vertex arrays
Testing glColor4i(), vertex arrays
Testing glColor4s(), vertex arrays
Testing glColor4ub(), vertex arrays
Testing glColor4ui(), vertex arrays
Testing glColor4us(), vertex arrays
Testing glVertexAttrib1d(), vertex arrays
Testing glVertexAttrib1d(), vertex arrays
Testing glVertexAttrib1f(), vertex arrays
Testing glVertexAttrib1s(), vertex arrays
Testing glVertexAttrib2d(), vertex arrays
Testing glVertexAttrib2f(), vertex arrays
Testing glVertexAttrib2s(), vertex arrays
Testing glVertexAttrib3d(), vertex arrays
Testing glVertexAttrib3f(), vertex arrays
Testing glVertexAttrib3s(), vertex arrays
Testing glVertexAttrib4Nub(), vertex arrays
Testing glVertexAttrib4d(), vertex arrays
Testing glVertexAttrib4f(), vertex arrays
Testing glVertexAttrib4s(), vertex arrays

Testing glColor3b(), immediate mode
Testing glColor3d(), immediate mode
Testing glColor3f(), immediate mode
Testing glColor3i(), immediate mode
Testing glColor3s(), immediate mode
Testing glColor3ub(), immediate mode
Testing glColor3ui(), immediate mode
Testing glColor3ui(), immediate mode
Testing glColor3us(), immediate mode
Testing glColor4b(), immediate mode
Testing glColor4d(), immediate mode
Testing glColor4f(), immediate mode
Testing glColor4i(), immediate mode
Testing glColor4s(), immediate mode
Testing glColor4ub(), immediate mode
Testing glColor4ui(), immediate mode
Testing glColor4us(), immediate mode
Testing glVertexAttrib1d(), immediate mode
Testing glVertexAttrib1d(), immediate mode
Testing glVertexAttrib1f(), immediate mode
Testing glVertexAttrib1s(), immediate mode
Testing glVertexAttrib2d(), immediate mode
Testing glVertexAttrib2f(), immediate mode
Testing glVertexAttrib2s(), immediate mode
Testing glVertexAttrib3d(), immediate mode
Testing glVertexAttrib3f(), immediate mode
Testing glVertexAttrib3s(), immediate mode
Testing glVertexAttrib4Nub(), immediate mode
Testing glVertexAttrib4d(), immediate mode
Testing glVertexAttrib4f(), immediate mode
Testing glVertexAttrib4s(), immediate mode

Testing glColor3b(), display list
Probe color at (95,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (105,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor3d(), display list
Probe color at (125,105)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (135,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (145,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor3f(), display list
Testing glColor3i(), display list
Probe color at (205,105)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (215,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (225,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor3s(), display list
Probe color at (245,105)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (255,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (265,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor3ub(), display list
Probe color at (285,105)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (295,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (305,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor3ui(), display list
Probe color at (325,105)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (335,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (345,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor3ui(), display list
Probe color at (365,105)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (375,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (385,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor3us(), display list
Probe color at (405,105)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (415,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (425,105)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4b(), display list
Probe color at (445,105)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (455,105)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (465,105)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4d(), display list
Probe color at (5,125)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (15,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (25,125)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4f(), display list
Probe color at (45,125)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (55,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (65,125)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4i(), display list
Probe color at (85,125)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (95,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (105,125)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4s(), display list
Probe color at (125,125)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (135,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (145,125)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4ub(), display list
Probe color at (165,125)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (175,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (185,125)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4ui(), display list
Probe color at (205,125)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (215,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (225,125)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glColor4us(), display list
Probe color at (245,125)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (255,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (265,125)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib1d(), display list
Probe color at (285,125)
  Expected: 0.200000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (295,125)
  Expected: 0.000000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (305,125)
  Expected: 0.500000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib1d(), display list
Probe color at (325,125)
  Expected: 0.200000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (335,125)
  Expected: 0.000000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (345,125)
  Expected: 0.500000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib1f(), display list
Probe color at (365,125)
  Expected: 0.200000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (375,125)
  Expected: 0.000000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (385,125)
  Expected: 0.500000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib1s(), display list
Probe color at (405,125)
  Expected: 0.200000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (415,125)
  Expected: 0.000000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (425,125)
  Expected: 0.500000 0.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib2d(), display list
Probe color at (445,125)
  Expected: 0.200000 0.400000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (455,125)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (465,125)
  Expected: 0.500000 0.300000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib2f(), display list
Probe color at (5,145)
  Expected: 0.200000 0.400000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (15,145)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (25,145)
  Expected: 0.500000 0.300000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib2s(), display list
Probe color at (45,145)
  Expected: 0.200000 0.400000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (55,145)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (65,145)
  Expected: 0.500000 0.300000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib3d(), display list
Probe color at (85,145)
  Expected: 0.200000 0.400000 0.600000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (95,145)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (105,145)
  Expected: 0.500000 0.300000 0.900000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib3f(), display list
Testing glVertexAttrib3s(), display list
Testing glVertexAttrib4Nub(), display list
Probe color at (205,145)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (215,145)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (225,145)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib4d(), display list
Probe color at (245,145)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (255,145)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (265,145)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib4f(), display list
Probe color at (285,145)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (295,145)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (305,145)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
Testing glVertexAttrib4s(), display list
Probe color at (325,145)
  Expected: 0.200000 0.400000 0.600000 0.400000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (335,145)
  Expected: 0.000000 1.000000 0.000000 0.500000
  Observed: 0.200000 0.200000 0.200000 1.000000
Probe color at (345,145)
  Expected: 0.500000 0.300000 0.900000 0.100000
  Observed: 0.200000 0.200000 0.200000 1.000000
PIGLIT: {"result": "fail" }

8e4efdc895eacca931b94a0c1fa01aae5c34463b is the first bad commit
commit 8e4efdc895eacca931b94a0c1fa01aae5c34463b
Author: Brian Paul <brianp@vmware.com>
Date:   Fri Jan 12 13:18:25 2018 -0700

    vbo: optimize some display list drawing (v2)
    
    The vbo_save_vertex_list structure records one or more glBegin/End
    primitives which all have the same vertex format.
    
    To draw these primitives, we setup the vertex array state, then
    issue the drawing command.  Before, the 'start' vertex was typically
    zero and we used the vertex array pointer to indicate where the
    vertex data starts.
    
    This patch checks if the vertex buffer offset is an exact multiple of
    the vertex size.  If so, that means we can use zero-based vertex array
    pointers and use the draw's start value to indicate where the vertex
    data starts.
    
    This means a series of display list drawing commands may have
    identical vertex array state.  This will get filtered out by the
    Gallium CSO module so we can issue a tight series of drawing commands
    without state changes to the device.
    
    Note that this also works for a series of glCallList commands (not
    just one list that contains multiple glBegin/End pairs).
    
    No Piglit or conform changes.
    
    v2: minor fixes suggested by Ian.
    
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>

:040000 040000 0757be5a58241cc12ce136e700a08e8dcd3071e5 ca3edf842285f642bc07a5126dd6a23d5b0cbc3c M	src
bisect run success
Comment 1 Brian Paul 2018-01-24 17:20:33 UTC
Fixed with commit 365a48abddcabf6596c2e34a784d91c8ab929918


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.