src/mesa/vbo/vbo_save_draw.c
@@ -325,13 +325,14 @@ vbo_save_playback_vertex_list(struct gl_context *ctx, void *data)
          _mesa_update_state(ctx);
 
       if (node->vertex_count > 0) {
+         GLuint min_index = node->start_vertex;
+         GLuint max_index = min_index + node->vertex_count - 1;
          vbo_context(ctx)->draw_prims(ctx,
                                       node->prims,
                                       node->prim_count,
                                       NULL,
                                       GL_TRUE,
-                                      0,    /* Node is a VBO, so this is ok */
-                                      node->vertex_count - 1,
+                                      min_index, max_index,
                                       NULL, 0, NULL);
       }
    }
